[package]
name = "autodiff"
version = "0.0.1"
edition = "2021"

[build]
rustdocflags = "--document-private-items"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
# doc-private = true

[package.metadata.docs.rs]
rustdoc-args = ["--no-deps", "--document-private-items"]


[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
